style(console): fix unexpected spacing under page title

--- a/packages/console/src/pages/Connectors/SignInExperienceSetupNotice/index.module.scss
+++ b/packages/console/src/pages/Connectors/SignInExperienceSetupNotice/index.module.scss
@@ -1,9 +1,5 @@
 @use '@/scss/underscore' as _;
 
-.icon {
-  flex-shrink: 0;
-}
-
-.chargeNotification {
+.notice {
   margin-top: _.unit(4);
 }
