--- a/packages/console/src/scss/page-layout.module.scss
+++ b/packages/console/src/scss/page-layout.module.scss
@@ -15,10 +15,6 @@
   gap: _.unit(6);
 }
 
-.subHeader {
-  margin: _.unit(4) 0 0;
-}
-
 .table {
   flex: 1;
   margin-top: _.unit(4);
